<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_edit"
    android:divider="@drawable/shape"
    android:showDividers="end|middle">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textSize="25dp"
        android:paddingTop="8dp"
        android:background="@color/other"
        android:layout_marginTop="@dimen/myself_top_margin"
        android:text="@string/other"
        android:textAlignment="center"
        />
    <!-- 意见反馈 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/feedback"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/myself_top_margin"
            android:layout_marginLeft="@dimen/myself_left_margin"/>
        <TextView
            android:id="@+id/other_feedback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/other_feedbback"
            android:paddingTop="8dp"
            android:layout_marginLeft="@dimen/myself_mid_margin"
            android:textSize="25dp"
            android:layout_weight="12"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/turnright"
            android:layout_marginTop="@dimen/myself_top_right_margin"
            android:layout_marginRight="@dimen/myself_right_margin"
            android:layout_weight="1"/>
    </LinearLayout>
    <!-- 给我个高分吧 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/cup"
            android:layout_marginTop="@dimen/myself_top_margin"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/myself_left_margin"/>
        <TextView
            android:id="@+id/other_good"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/other_good"
            android:paddingTop="8dp"
            android:layout_marginLeft="@dimen/myself_mid_margin"
            android:textSize="25dp"
            android:layout_weight="6"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/turnright"
            android:layout_marginTop="@dimen/myself_top_right_margin"
            android:layout_marginRight="@dimen/myself_right_margin"
            android:layout_weight="1"/>
    </LinearLayout>
    <!-- 关于我 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_perm_contact_calendar_light_green_400_36dp"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/myself_top_margin"
            android:layout_marginLeft="@dimen/myself_left_margin"/>
        <TextView
            android:id="@+id/other_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/other_about"
            android:paddingTop="8dp"
            android:layout_marginLeft="@dimen/myself_mid_margin"
            android:textSize="25dp"
            android:layout_weight="12"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/turnright"
            android:layout_marginTop="@dimen/myself_top_right_margin"
            android:layout_marginRight="@dimen/myself_right_margin"
            android:layout_weight="1"/>
    </LinearLayout>

</LinearLayout>