<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_edit"
    android:divider="@drawable/shape"
    android:showDividers="end|middle">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textSize="25dp"
        android:paddingTop="8dp"
        android:background="@color/other"
        android:layout_marginTop="@dimen/myself_top_margin"
        android:text="@string/myself"
        android:textAlignment="center"
        />
    <!-- 我的收藏 -->
    <LinearLayout
        android:id="@+id/myself_collect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_grade_light_green_400_36dp"
            android:layout_marginTop="@dimen/myself_top_margin"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/myself_left_margin"/>
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/myself_collect"
            android:paddingTop="8dp"
            android:layout_marginLeft="@dimen/myself_mid_margin"
            android:textSize="25dp"
            android:layout_weight="4"/>
        <TextView
            android:id="@+id/myself_collect_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@android:color/holo_green_dark"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/turnright"
            android:layout_marginTop="@dimen/myself_top_right_margin"
            android:layout_marginRight="@dimen/myself_right_margin"
            android:layout_weight="1"/>
    </LinearLayout>
    <!-- 最近浏览 -->
    <LinearLayout
        android:id="@+id/myself_browse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_restore_light_green_400_36dp"
            android:layout_marginTop="@dimen/myself_top_margin"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/myself_left_margin"/>
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/myself_browse"
            android:paddingTop="8dp"
            android:layout_marginLeft="@dimen/myself_mid_margin"
            android:textSize="25dp"
            android:layout_weight="4"/>
        <TextView
            android:id="@+id/myself_browse_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@android:color/holo_green_dark"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/turnright"
            android:layout_marginTop="@dimen/myself_top_right_margin"
            android:layout_marginRight="@dimen/myself_right_margin"
            android:layout_weight="1"/>
    </LinearLayout>
    <!-- 通话记录 -->
    <LinearLayout
        android:id="@+id/myself_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_settings_phone_light_green_400_36dp"
            android:layout_marginTop="@dimen/myself_top_margin"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/myself_left_margin"/>
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/myself_phone"
            android:paddingTop="8dp"
            android:layout_marginLeft="@dimen/myself_mid_margin"
            android:textSize="25dp"
            android:layout_weight="4"/>
        <TextView
            android:id="@+id/myself_phone_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@android:color/holo_green_dark"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/turnright"
            android:layout_marginTop="@dimen/myself_top_right_margin"
            android:layout_marginRight="@dimen/myself_right_margin"
            android:layout_weight="1"/>
    </LinearLayout>

</LinearLayout>